--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,6 @@
-fastapi==0.115.8
-uvicorn[standard]==0.34.0
-pydantic==2.10.6
-python-multipart==0.0.20
-
-
-npm run dev
+fastapi==0.110.0
+uvicorn[standard]==0.29.0
+pydantic==2.6.4
+pydantic-core==2.16.3
+python-multipart==0.0.9
+pandas==2.2.2
